--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -7,5 +7,13 @@
   <%= f.label :details %>
   <%= f.text_field :details, class: "form-control" %>
   </div>
+  <% if task.id  %>
+  <div class="form-group">
+  <%= f.label "Completed" %>
+  </div>
+  <div class="form-check">
+  <%= f.check_box :completed, class: "form-check" %>
+  </div>
+  <% end  %>
   <%= f.submit "Submit", class: "btn btn-primary"%>
 <% end %>
