--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,13 +1,8 @@
+<div class="container">
 <h1>Edit task</h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_field :details %>
-  <%= f.label "Completed" %>
-  <%= f.check_box :completed %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form', task: @task %>
+
 
 <p><%= link_to "Back to list", tasks_path %></p>
+</div>
