--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My tasks</h1>
+<div class="container"><h1>My tasks</h1>
 <ul>
 <% @tasks.each do |task| %>
   <li>
@@ -19,4 +19,5 @@
 <%= link_to new_task_path do %>
 <i class="fas fa-plus"></i> Add a new task
 <% end %>
+</div>
 </div>
