--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New task</h1>
+<div class="container"><h1>New task</h1>
 
 <%= render 'form', task: @task %>
 
 <p><%= link_to "Back to list", tasks_path %></p>
+</div>
